--- a/fly.template.toml
+++ b/fly.template.toml
@@ -10,6 +10,7 @@ processes = []
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
+  cmd = ["node", "--max-old-space-size=180", "app.js"]
 
 [[services]]
   http_checks = []
