--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "start": "node app",
     "lint": "eslint .",
-    "build": "tsc",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
@@ -22,6 +21,7 @@
     "express": "^4.16.3",
     "express-actuator": "^1.8.1",
     "express-response-size": "^0.0.3",
+    "jws": "^4.0.0",
     "node-fetch": "^2.2.0",
     "uuid": "^3.3.2"
   },
