--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node app",
     "lint": "eslint .",
     "build": "tsc",
+    "test": "jest",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
@@ -26,12 +27,16 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.5.0",
+    "@types/jest": "^29.2.3",
     "@types/node": "^17.0.31",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.6.2",
+    "supertest": "^6.3.1",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@3.2.1"
