--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node app",
     "lint": "eslint .",
     "types": "tsc --noEmit --incremental",
-    "verify": "yarn -s lint && yarn types"
+    "test": "jest",
+    "verify": "yarn -s lint && yarn types",
+    "test:e2e": "jest --config ./jest-e2e.config.js --verbose"
   },
   "dependencies": {
     "@actual-app/api": "4.1.5",
@@ -26,12 +28,16 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.5.0",
+    "@types/jest": "^29.2.5",
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.3.1",
     "prettier": "^2.6.2",
+    "puppeteer": "^19.5.2",
+    "supertest": "^6.3.3",
     "typescript": "^4.6.4"
   }
 }
