--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
