--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "23.1.12",
   "license": "MIT",
   "description": "actual syncing server",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app",
+    "start": "concurrently \"npx tsc --watch\" \"nodemon -q build/app.js\"",
     "lint": "eslint .",
     "build": "tsc",
     "test": "jest",
@@ -27,16 +27,19 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.5.0",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.4.0",
     "@types/node": "^17.0.31",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
     "prettier": "^2.6.2",
     "supertest": "^6.3.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.6.4"
   },
   "packageManager": "yarn@3.2.1"
