--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@actual-app/api": "4.1.6",
     "@actual-app/web": "23.1.12",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "better-sqlite3": "^7.5.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "4.17",
-    "express-actuator": "^1.8.1",
+    "express": "4.18.2",
+    "express-actuator": "1.8.4",
     "express-response-size": "^0.0.3",
     "uuid": "^3.3.2"
   },
