--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -1,15 +1,15 @@
-name: Build Docker Image
+name: Build Released Docker Image
 
-# Docker Images are built for every push to master or when a new tag is created
+# Edge Docker images are built for every commit, and daily
 on:
   push:
     branches:
       - master
-    tags:
-      - 'v*.*.*'
     paths-ignore:
       - README.md
       - LICENSE.txt
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   IMAGES: |
@@ -17,15 +17,9 @@ env:
     ghcr.io/actualbudget/actual-server
 
   # Creates the following tags:
-  # - actual-server:latest (see docker/metadata-action flavor inputs, below)
-  # - actual-server:edge (for master)
-  # - actual-server:1.3
-  # - actual-server:1.3.7
-  # - actual-server:sha-90dd603
+  # - actual-server:edge
   TAGS: |
     type=edge,value=edge
-    type=semver,pattern={{version}}
-    type=sha
 
 jobs:
   build:
@@ -46,9 +40,6 @@ jobs:
         with:
           # Push to both Docker Hub and Github Container Registry
           images: ${{ env.IMAGES }}
-          # Automatically update :latest for our semver tags
-          flavor: |
-            latest=auto
           tags: ${{ env.TAGS }}
 
       - name: Docker meta for Alpine image
@@ -56,10 +47,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGES }}
-          # Automatically update :latest for our semver tags and suffix all tags
-          flavor: |
-            latest=auto
-            suffix=-alpine,onlatest=true
+          flavor: suffix=-alpine
           tags: $${{ env.TAGS }}
 
       - name: Login to Docker Hub
@@ -80,6 +68,7 @@ jobs:
         with:
           context: .
           push: true
+          file: docker/edge-ubuntu.Dockerfile
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
 
@@ -88,6 +77,6 @@ jobs:
         with:
           context: .
           push: true
-          file: Dockerfile.alpine
+          file: docker/edge-alpine.Dockerfile
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.alpine-meta.outputs.tags }}
