--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@actual-app/api": "4.1.6",
-    "@actual-app/web": "^23.2.5",
+    "@actual-app/web": "23.2.5",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^7.5.0",
     "body-parser": "^1.20.1",
