--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app",
     "lint": "eslint .",
     "build": "tsc",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --coverage",
     "test:e2e": "test --config ./jest-e2e.config.js",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
