--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/better-sqlite3": "^7.5.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-actuator": "^1.8.0",
     "@types/jest": "^29.2.3",
     "@types/node": "^17.0.31",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^3.4.10",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
