--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     // DOM for URL global in Node 16+
-    "lib": ["ES2021", "DOM"],
+    "lib": ["ES2021"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -14,8 +14,7 @@
     "checkJs": true,
     "moduleResolution": "node16",
     "module": "node16",
-    "outDir": "build",
-    "traceResolution": true
+    "outDir": "build"
   },
   "exclude": ["node_modules", "build", "./app-plaid.js"]
 }
