--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "build": "tsc",
     "test": "NODE_ENV=test jest --coverage",
-    "test:e2e": "test --config ./jest-e2e.config.js",
+    "test:e2e": "yarn test --config ./jest-e2e.config.js",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
@@ -26,6 +26,10 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-flow": "^7.18.6",
     "@types/better-sqlite3": "^7.5.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^17.0.31",
@@ -36,6 +40,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.3.1",
     "prettier": "^2.6.2",
+    "puppeteer": "^19.6.3",
     "supertest": "^6.3.3",
     "typescript": "^4.6.4"
   },
