--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-response-size": "^0.0.3",
+    "nordigen-node": "^1.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
