--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/express-actuator": "^1.8.0",
     "@types/jest": "^29.2.3",
     "@types/node": "^17.0.45",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
