--- a/jest.config.json
+++ b/jest.config.json
@@ -6,8 +6,8 @@
   "moduleFileExtensions": ["ts", "js", "json"],
   "testEnvironment": "node",
   "collectCoverage": true,
-  "collectCoverageFrom": [",**/*.{js,ts,tsx}"],
-  "coveragePathIgnorePatterns": ["dist", "/node_modules/", "/build/", "/nordigen-node/"],
+  "collectCoverageFrom": ["**/*.{js,ts,tsx}"],
+  "coveragePathIgnorePatterns": ["dist", "/node_modules/", "/build/"],
   "coverageReporters": ["html", "lcov", "text", "text-summary"],
   "resetMocks": true,
   "restoreMocks": true
