--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
     "@babel/preset-flow": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
     "@types/better-sqlite3": "^7.5.0",
@@ -45,6 +42,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
     "prettier": "^2.8.3",
+    "supertest": "^6.3.1",
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.2.1"
