--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -8,8 +8,15 @@ on:
     paths-ignore:
       - README.md
       - LICENSE.txt
+  pull_request:
+    branches:
+      - master
   schedule:
     - cron: '0 0 * * *'
+
+permissions:
+  contents: read
+  packages: write
 
 env:
   IMAGES: |
@@ -25,6 +32,9 @@ jobs:
   build:
     name: Build Docker image
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu, alpine]
     steps:
       - uses: actions/checkout@v3
 
@@ -40,15 +50,8 @@ jobs:
         with:
           # Push to both Docker Hub and Github Container Registry
           images: ${{ env.IMAGES }}
+          flavor: ${{ matrix.os == 'ubuntu' && '' || format('suffix={0}', matrix.os) }}
           tags: ${{ env.TAGS }}
-
-      - name: Docker meta for Alpine image
-        id: alpine-meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.IMAGES }}
-          flavor: suffix=-alpine
-          tags: $${{ env.TAGS }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -63,20 +66,13 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push standard image
+      - name: Build and push image
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: true
-          file: docker/edge-ubuntu.Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          file: docker/edge-${{ matrix.os }}.Dockerfile
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
-
-      - name: Build and push Alpine image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          file: docker/edge-alpine.Dockerfile
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ steps.alpine-meta.outputs.tags }}
+          build-args: |
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
