--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           # Push to both Docker Hub and Github Container Registry
           images: ${{ env.IMAGES }}
-          flavor: ${{ matrix.os == 'ubuntu' && '' || format('suffix={0}', matrix.os) }}
+          flavor: ${{ matrix.os != 'ubuntu' && format('suffix=-{0}', matrix.os) || '' }}
           tags: ${{ env.TAGS }}
 
       - name: Login to Docker Hub
