--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -54,7 +54,7 @@ jobs:
           flavor: |
             latest=true
             suffix=-alpine,onlatest=true
-          tags: $${{ env.TAGS }}
+          tags: ${{ env.TAGS }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
