--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
-version: "3"
+version: '3'
 services:
   actual_server:
-    container_name: actual_server
-    build:
-      context: ./
-      dockerfile: Dockerfile
+    image: jlongster/actual-server:latest
     ports:
+      # This line makes Actual available at port 5006 of the device you run the server on,
+      # i.e. http://localhost:5006. You can change the first number to change the port, if you want.
       - "5006:5006"
+    environment:
+      # Uncomment any of the lines below to set configuration options.
+      # - ACTUAL_HTTPS_KEY=/data/selfhost.key
+      # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
+      # - ACTUAL_NORDIGEN_SECRET_ID=xxxx
+      # - ACTUAL_NORDIGEN_SECRET_KEY=xxxx
+      # See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
     volumes:
-      - ./server-files:/app/server-files
-      - ./user-files:/app/user-files
+      # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
+      # '/data' is the path Actual will look for its files in by default, so leave that as-is.
+      - ./actual-data:/data
     restart: unless-stopped
