:sparkles: New Docker Hub org in CI and README

--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -20,7 +20,7 @@ permissions:
 
 env:
   IMAGES: |
-    jlongster/actual-server
+    actualbudget/actual-server
     ghcr.io/actualbudget/actual-server
 
   # Creates the following tags:
