--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -13,6 +13,7 @@ env:
   IMAGES: |
     actualbudget/actual-server
     ghcr.io/actualbudget/actual-server
+    jlongster/actual-server
 
   # Creates the following tags:
   # - actual-server:latest (see docker/metadata-action flavor inputs, below)
