--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "better-sqlite3": "^8.2.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-response-size": "^0.0.3",
