--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -30,10 +30,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, alpine]
-        platform: [linux/amd64, linux/arm64, linux/arm/v7, linux/arm/v6]
+        arch: [amd64, arm64, arm/v7, arm/v6]
         exclude:
           - os: ubuntu
-            platform: linux/arm/v6
+            arch: arm/v6
     steps:
       - uses: actions/checkout@v3
 
@@ -83,5 +83,5 @@ jobs:
           context: .
           push: true
           file: docker/stable-${{ matrix.os }}.Dockerfile
-          platforms: ${{ matrix.platform }}
+          platforms: linux/${{ matrix.arch }}
           tags: ${{ steps.meta.outputs.tags }}
