github workflow: old way to build image

--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -38,10 +38,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu, alpine]
-        arch: [amd64, arm64, arm/v7, arm/v6]
-        exclude:
-          - os: ubuntu
-            arch: arm/v6
     steps:
       - uses: actions/checkout@v3
 
@@ -81,7 +77,7 @@ jobs:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           file: docker/edge-${{ matrix.os }}.Dockerfile
-          platforms: linux/${{ matrix.arch }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7${{ matrix.os == 'alpine' && ',linux/arm/v6' || '' }}
           tags: ${{ steps.meta.outputs.tags }}
           build-args: |
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
