--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^4.3.4",
     "express": "4.18.2",
     "express-actuator": "1.8.4",
+    "express-rate-limit": "^6.7.0",
     "express-response-size": "^0.0.3",
     "jws": "^4.0.0",
     "nordigen-node": "^1.2.3",
