--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --trace-warnings' jest  --coverage",
     "types": "tsc --noEmit --incremental",
-    "verify": "yarn -s lint && yarn types"
+    "verify": "yarn -s lint && yarn types",
+    "reset-password": "node src/scripts/reset-password.js"
   },
   "dependencies": {
     "@actual-app/api": "5.1.2",
